fixed margins and padding on project seciton, issues with being zoomed in on load on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -117,8 +117,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 20px;
-  padding: 0px 10px 0px 10px;
-  // margin: 0 30px 0 30px;
+  padding: 0 25px 0 25px;
   .image-wrapper{
     display: grid;
     justify-items: center;
